--- a/TealiumFacebook.xcodeproj/xcshareddata/xcschemes/TealiumFacebook.xcscheme
+++ b/TealiumFacebook.xcodeproj/xcshareddata/xcschemes/TealiumFacebook.xcscheme
@@ -29,9 +29,11 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Release"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -40,6 +42,17 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "CFC8D9AD232AB3A400A4987F"
+            BuildableName = "TealiumFacebook.framework"
+            BlueprintName = "TealiumFacebook"
+            ReferencedContainer = "container:TealiumFacebook.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
