--- a/Examples/TealiumFacebookExampleUIKit/TealiumFacebookExampleUIKit/Info.plist
+++ b/Examples/TealiumFacebookExampleUIKit/TealiumFacebookExampleUIKit/Info.plist
@@ -33,12 +33,16 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
+					<key>UISceneStoryboardFile</key>
+					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -56,7 +60,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<!-- Facebook -->
+    <!-- Facebook -->
     <key>CFBundleURLTypes</key>
     <array>
         <dict>
