Update sample apps

--- a/Examples/TealiumFacebookExampleUIKit/Podfile
+++ b/Examples/TealiumFacebookExampleUIKit/Podfile
@@ -6,6 +6,5 @@ target 'TealiumFacebookExampleUIKit' do
   use_frameworks!
 
   # Pods for TealiumFacebookExampleUIKit
-  pod "tealium-swift"
-  pod "FBSDKCoreKit"
+  pod "TFB"
 end
