updated dependencies and sample apps

--- a/Examples/TealiumFacebookExampleSwiftUI/Podfile
+++ b/Examples/TealiumFacebookExampleSwiftUI/Podfile
@@ -1,10 +1,17 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+#platform :ios, '9.0'
 
 target 'TealiumFacebookExample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for TealiumFacebookExample
+
+  #!!! NOTE: Import TealiumFacebook instead of below 
   pod 'TFB'
+  pod 'tealium-swift/TealiumLogger'
+  pod 'tealium-swift/TealiumTagManagement'
+  pod 'tealium-swift/TealiumAppData'
+  pod 'tealium-swift/TealiumDeviceData'
+  pod 'tealium-swift/TealiumLifecycle'
 end
