Update naming and sdk versions

--- a/Examples/TealiumFacebookExampleSwiftUI/Podfile
+++ b/Examples/TealiumFacebookExampleSwiftUI/Podfile
@@ -8,7 +8,7 @@ target 'TealiumFacebookExample' do
   # Pods for TealiumFacebookExample
 
   #!!! NOTE: Import TealiumFacebook instead of below 
-  pod 'TFB'
+  pod 'TealiumFacebook', :path=> '/Users/christina/Projects/work-repos/github/tealium-ios-facebook-remote-command'
   pod 'tealium-swift/TealiumLogger'
   pod 'tealium-swift/TealiumTagManagement'
   pod 'tealium-swift/TealiumAppData'
