Updated podspec and Sample Apps (#4)
* updated dependencies and sample apps

* remove config setting

* add version to facebook dependency

* Update naming and sdk versions

* Updated sample app podfile

Co-authored-by: Christina <christina.sund@tealium.com>

--- a/Examples/TealiumFacebookExampleUIKit/Podfile
+++ b/Examples/TealiumFacebookExampleUIKit/Podfile
@@ -6,5 +6,10 @@ target 'TealiumFacebookExampleUIKit' do
   use_frameworks!
 
   # Pods for TealiumFacebookExampleUIKit
-  pod "TFB"
+  pod 'TealiumFacebook', '~> 1.0'
+  pod 'tealium-swift/TealiumLogger', '~> 1.9'
+  pod 'tealium-swift/TealiumTagManagement', '~> 1.9'
+  pod 'tealium-swift/TealiumAppData', '~> 1.9'
+  pod 'tealium-swift/TealiumDeviceData', '~> 1.9'
+  pod 'tealium-swift/TealiumLifecycle', '~> 1.9'
 end
