--- a/Examples/TealiumFacebookExampleSwiftUI/Podfile
+++ b/Examples/TealiumFacebookExampleSwiftUI/Podfile
@@ -1,10 +1,15 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+#platform :ios, '9.0'
 
 target 'TealiumFacebookExample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
   # Pods for TealiumFacebookExample
-  pod 'TFB'
+  pod 'TealiumFacebook', '~> 1.0'
+  pod 'tealium-swift/TealiumLogger', '~> 1.9'
+  pod 'tealium-swift/TealiumTagManagement', '~> 1.9'
+  pod 'tealium-swift/TealiumAppData', '~> 1.9'
+  pod 'tealium-swift/TealiumDeviceData', '~> 1.9'
+  pod 'tealium-swift/TealiumLifecycle', '~> 1.9'
 end
