--- a/TealiumFacebookExample/Podfile
+++ b/TealiumFacebookExample/Podfile
@@ -1,12 +1,12 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+#platform :ios, '9.0'
 
-target 'TealiumFacebookExampleUIKit' do
+target 'TealiumFacebookExample' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  # Pods for TealiumFacebookExampleUIKit
-  pod 'TealiumFacebook', '~> 0.0.1'
+  # Pods for TealiumFacebookExample
+  pod 'TealiumFacebook', :path=> '../../'
   pod 'tealium-swift/TealiumLogger', '~> 1.9'
   pod 'tealium-swift/TealiumTagManagement', '~> 1.9'
   pod 'tealium-swift/TealiumAppData', '~> 1.9'
