Example app UI updates

--- a/TealiumFacebookExample/Podfile
+++ b/TealiumFacebookExample/Podfile
@@ -6,7 +6,7 @@ target 'TealiumFacebookExample' do
   use_frameworks!
 
   # Pods for TealiumFacebookExample
-  pod 'TealiumFacebook', :path=> '../../'
+  pod 'TealiumFacebook', :path=> '../'
   pod 'tealium-swift/TealiumLogger', '~> 1.9'
   pod 'tealium-swift/TealiumTagManagement', '~> 1.9'
   pod 'tealium-swift/TealiumAppData', '~> 1.9'
