--- a/TealiumFacebookExample/TealiumFacebookExample/Info.plist
+++ b/TealiumFacebookExample/TealiumFacebookExample/Info.plist
@@ -56,31 +56,18 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>fb999999999999999</string>
-			</array>
-		</dict>
-	</array>
-	<key>FacebookAppID</key>
-	<string>999999999999999</string>
-	<key>FacebookDisplayName</key>
-	<string>TealiumExampleSwiftUI</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>fbapi</string>
-		<string>fb-messenger-share-api</string>
-		<string>fbauth2</string>
-		<string>fbshareextension</string>
-	</array>
-	<key>FacebookAutoLogAppEventsEnabled</key>
-	<true/>
-	<key>FacebookAutoInitEnabled</key>
-	<true/>
-	<key>FacebookAdvertiserIDCollectionEnabled</key>
-	<true/>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb9999999999999999</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>9999999999999999</string>
+    <key>FacebookDisplayName</key>
+    <string>TealiumExampleSwift</string>
 </dict>
 </plist>
