Update to SPM / JSON / sample app

--- a/TealiumFacebookExample/Podfile
+++ b/TealiumFacebookExample/Podfile
@@ -6,10 +6,9 @@ target 'TealiumFacebookExample' do
   use_frameworks!
 
   # Pods for TealiumFacebookExample
-  pod 'TealiumFacebook', :path=> '../'
-  pod 'tealium-swift/TealiumLogger', '~> 1.9'
-  pod 'tealium-swift/TealiumTagManagement', '~> 1.9'
-  pod 'tealium-swift/TealiumAppData', '~> 1.9'
-  pod 'tealium-swift/TealiumDeviceData', '~> 1.9'
-  pod 'tealium-swift/TealiumLifecycle', '~> 1.9'
+  # pod 'TealiumFacebook', :path=> '../'
+  # pod 'tealium-swift/TealiumLifecycle', '~> 2.1'
+  pod 'tealium-swift', :path=> '/Users/christina/Projects/work-repos/github/tealium-swift-builder'
+  pod 'FBSDKCoreKit'
+  
 end
