--- a/TealiumFacebookExample/Podfile
+++ b/TealiumFacebookExample/Podfile
@@ -7,6 +7,6 @@ target 'TealiumFacebookExample' do
 
   # Pods for TealiumFacebookExample
   pod 'TealiumFacebook', :path=> '../'
-  pod 'tealium-swift/TealiumLifecycle', '~> 2.1'
+  pod 'tealium-swift/Lifecycle', '~> 2.1'
 
 end
