--- a/TealiumFacebookExample/Podfile
+++ b/TealiumFacebookExample/Podfile
@@ -8,5 +8,6 @@ target 'TealiumFacebookExample' do
   # Pods for TealiumFacebookExample
   pod 'TealiumFacebook', :path=> '../'
   pod 'tealium-swift/Lifecycle', '~> 2.6'
+  pod 'tealium-swift/TagManagement', '~> 2.6'
 
 end
