--- a/.gitignore
+++ b/.gitignore
@@ -121,3 +121,5 @@ xcuserdata
 
 # End of https://www.gitignore.io/api/xcode,swift,carthage,cocoapods,swiftpackagemanager
 
+*.xcframework
+*.xcframework.zip
