Enhance FacebookCommand and FacebookRemoteCommand with completion handlers
- Updated the initialize method in FacebookCommand to accept an optional completion handler.
- Modified FacebookRemoteCommand to invoke the completion handler after initialization.
- Adjusted MockFacebookInstance to align with the new method signature.
- Refactored TealiumHelper to utilize the updated initialization process.

--- a/TealiumFacebookExample/TealiumFacebookExample/Info.plist
+++ b/TealiumFacebookExample/TealiumFacebookExample/Info.plist
@@ -63,13 +63,15 @@
 		<dict>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>fb9999999999999999</string>
+				<string>fbYOUR_APP_ID_HERE</string>
 			</array>
 		</dict>
 	</array>
 	<key>FacebookAppID</key>
-	<string>9999999999999999</string>
+	<string>YOUR_APP_ID_HERE</string>
 	<key>FacebookDisplayName</key>
-	<string>TealiumFacebookExample</string>
+	<string>YOUR_DISPLAY_NAME_HERE</string>
+	<key>FacebookClientToken</key>
+	<string>YOUR_CLIENT_TOKEN_HERE</string>
 </dict>
 </plist>
