Update xcframewroks script to use correct certificate and fix shellcheck warnings

--- a/.gitignore
+++ b/.gitignore
@@ -122,4 +122,5 @@ xcuserdata
 # End of https://www.gitignore.io/api/xcode,swift,carthage,cocoapods,swiftpackagemanager
 
 *.xcframework
+*tealium-xcframeworks/*
 *.xcframework.zip
